# a2a-relay

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
a2a_relay/: cli.py  core.py  dispatcher.py
docs/: adding-an-agent.md  agent-integration.md  configuration.md  getting-started.md  message-schema.md  protocol.md
docs/design/: 2026-05-08-a2a-relay-upgrade-plan.md  2026-05-08-v03-dispatcher-development-path.md  2026-05-09-runtime-watchers-and-multi-contact.md  2026-05-09-task-delegation-worker.md  2026-05-09-v13-auto-reply-and-git-collaboration.md  2026-05-09-v13-gpt55-review.md  2026-05-09-v13-implementation-slices.md
examples/: lulu-to-zhiwei.sh  python_agent.py  worker-to-operator.sh
examples/config/: minimal-contacts.json  minimal-dispatcher.json
examples/systemd/: a2a-watch@.service
tests/: test_cli_v02.py  test_contacts.py  test_dispatcher.py  test_receipt.py
