[project]
name = "a2a-relay"
version = "0.1.0"
description = "Small, boring, auditable agent-to-agent relay protocol and filesystem mailbox transport."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Zhiwei", email = "zhiwei@siwen.ink"}]
keywords = ["agent", "a2a", "relay", "mailbox", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Communications",
  "Topic :: System :: Distributed Computing"
]

[project.scripts]
a2a-relay = "a2a_relay.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
